--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "ioredis": "^5.8.0",
+    "pg": "^8.16.3",
+    "rate-limiter-flexible": "^8.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
